Aggiunta dashboard Admin/Docente

--- a/project-root/frontend/public/index.html
+++ b/project-root/frontend/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-  <!-- React monterà il sito dentro questo div -->
+  <!-- React  -->
   <div id="root"></div>
 
   <!-- Bootstrap JavaScript -->
