--- a/project-root/frontend/public/index.html
+++ b/project-root/frontend/public/index.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Armonizzazione Percorsi</title>
-
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css">
-</head>
-<body>
-
-  <!-- React  -->
-  <div id="root"></div>
-
-  <!-- Bootstrap JavaScript -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"></script>
-
-</body>
-</html>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Armonizzazione Percorsi</title>
+  </head>
+  <body>
+    <noscript>Per favore abilita JavaScript per utilizzare questa app.</noscript>
+    <div id="root"></div>
+  </body>
+</html> 
